--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,5 +9,6 @@
 <p th:text="${value[0].subtitle}"></p>
 <h3 th:text="${value[0].auth}"></h3>
 <p th:text="${value[0].authSub}"></p>
+<a href="/check-page">Check-page</a>
 </body>
 </html>
