--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,9 +11,7 @@
 </div>
 <h2 class="login-title">Start your journey in Kyrgyzstan!</h2>
 <form th:action="@{/registration}" method="post" class="login__actual-form">
-  <input type="text" name="name" placeholder="Username" class="form-item">
-  <input type="email" name="email" placeholder="Email" class="form-item">
-  <input type="text" name="phoneNumber" placeholder="Phone number" class="form-item">
+  <input type="text" name="personalId" placeholder="PersonalId" class="form-item">
   <input type="password" name="password" placeholder="Password" class="form-item">
   <!--<input type="hidden" name="_csrf" th:value="${_csrf.token}">
   -->
