--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,21 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<div class="login__sign-in-up">
-  <a href="/login" class="sign">Log in</a>
-  <a href="/registration" class="sign sign-border">Sign up</a>
+<div>
+    <a href="/login"></a>
+    <a href="/registration">Sign up</a>
 </div>
-<h2 class="login-title">Start your journey in Kyrgyzstan!</h2>
-<form th:action="@{/registration}" method="post" class="login__actual-form">
-  <input type="text" name="personalId" placeholder="PersonalId" class="form-item">
-  <input type="password" name="password" placeholder="Password" class="form-item">
-  <!--<input type="hidden" name="_csrf" th:value="${_csrf.token}">
-  -->
-  <div th:if="${message}" class="login__message">
-    <span th:text="${message}" class="login-message"/>
-    <a href="/login" class="login-message-link">log in</a>
-  </div>
-  <input type="submit"  class="form-btn" value="Register">
+<h2>Start your journey in Kyrgyzstan!</h2>
+<form th:action="@{/registration}" method="post">
+    <input type="text" name="personalId" placeholder="PersonalId">
+    <input type="password" name="password" placeholder="Password">
+    <!--<input type="hidden" name="_csrf" th:value="${_csrf.token}">
+    -->
+    <div th:if="${message}">
+        <span th:text="${message}"></span>
+        <a href="/login">log in</a>
+    </div>
+    <input type="submit" value="Register">
 </form>
 </body>
 </html>
