search + home styles

--- a/src/main/resources/templates/block/footer.html
+++ b/src/main/resources/templates/block/footer.html
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer th:fragment="footer"
+        xmlns:th="http://www.w3.org/1999/xhtml" class="footer d-flex">
+    <img src="/images/svg/logoFoot.svg" alt="logo">
+    <div class="contacts d-flex">
+        <h6>Контакты</h6>
+        <span>Телефон:</span>
+        <span>+996905950667</span>
+        <span>+996905950667</span>
+        <span>Почта:</span>
+        <span>sckask@gmail.com</span>
+    </div>
+    <div class="address d-flex">
+        <h6>Адрес</h6>
+        <span>г.Бишкек - Малдыбаева 78</span>
+        <span>г.Ош - Ахунбаева</span>
+        <span>г.Ош - Ахунбаева</span>
+        <span>г.Ош - Ахунбаева</span>
+        <span>г.Ош - Ахунбаева</span>
+    </div>
+    <div class="questions d-flex">
+        <h6>Часто задаваемые вопросы</h6>
+        <a href="/">Что такое полис ОМС?</a>
+        <a href="/">Как полчуть пароль для входа?</a>
+        <a href="/">Как сделать запись на прием?</a>
+        <a href="">Смотреть больше...</a>
+    </div>
+</footer>
