--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -1,16 +1,31 @@
-<div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
-    <a href="/polyclinics">Поликлиники</a>
-    <a href="/services">Услуги</a>
-    <span sec:authorize="isAuthenticated()">
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Выйти"/>
-        </form>
-    </span>
-    <span sec:authorize="!isAuthenticated()">
-        <a href="/login">Вход</a>
-    </span>
-    <a sec:authorize="hasAuthority('ADMIN')" href="/admin">Личный кабинет</a>
-    <a sec:authorize="hasAuthority('USER')" href="/user">Личный кабинет</a>
-    <a sec:authorize="hasAuthority('RECEPTIONIST')" href="/reception">Личный кабинет</a>
-    <a sec:authorize="hasAuthority('STAFF')" href="/staff">Личный кабинет</a>
-</div>
+<header class="d-flex" th:fragment="header"
+        xmlns:th="http://www.w3.org/1999/xhtml"
+        xmlns:sec="http://www.w3.org/1999/xhtml">
+    <div class="header__left d-flex">
+        <a href="/">
+            <img src="/images/svg/logo.svg" alt="logo" />
+        </a>
+        <div class="d-flex">
+            <a href="">Нужна помощь?</a>
+            <a href="">Онлайн консультация</a>
+        </div>
+    </div>
+    <div class="header__right d-flex">
+        <a href="/">Главная</a>
+        <a href="/polyclinics">Поликлиники</a>
+        <a href="/services">Услуги</a>
+        <span sec:authorize="isAuthenticated()">
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" value="Выйти"/>
+            </form>
+        </span>
+        <span sec:authorize="!isAuthenticated()">
+            <a href="/login">Вход</a>
+        </span>
+        <a sec:authorize="hasAuthority('ADMIN')" href="/admin">Личный кабинет</a>
+        <a sec:authorize="hasAuthority('USER')" href="/user">Личный кабинет</a>
+        <a sec:authorize="hasAuthority('RECEPTIONIST')" href="/reception">Личный кабинет</a>
+        <a sec:authorize="hasAuthority('STAFF')" href="/staff">Личный кабинет</a>
+        <a class="logout" href="">Выход</a>
+    </div>
+</header>
