--- a/src/main/resources/templates/polyclinic.html
+++ b/src/main/resources/templates/polyclinic.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Поликлиники</title>
 </head>
 <body>
 Here is polyclinics
+    <form action="/polyclinics" method="get" class="search">
+        <input type="text" name="name" placeholder="Найти поликлинику по названию">
+        <input type="submit" value="Искать">
+    </form>
+<div th:each="pol : ${pol}">
+    Поликлиника <span th:text="${pol.name}"></span> в области: <span th:text="${pol.city.region.name}"></span>
+</div>
 </body>
 </html>
