--- a/src/main/resources/templates/poly-info.html
+++ b/src/main/resources/templates/poly-info.html
@@ -23,5 +23,6 @@
 <!--====-->
 <br><br><br><br><br><br><br>
 <div th:insert="block/footer :: footer"></div>
+<script  type="text/javascript" th:src="@{/js/update.js}"></script>
 </body>
 </html>
