--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<div th:each="service : ${services}">
+    <hr>
+    <p th:text="${service.title}"></p>
+    <div th:each="serv : ${service.servicesMeds}">
+        <a th:href="'/serv/' + ${serv.id}" th:text="${serv.name}"></a>
+    </div>
+</div>
 </body>
 </html>
