--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
 <!--sec:authorize="hasAuthority('ADMIN')"-->
 <div class="login__sign-in-up">
     <a href="/login" class="sign sign-border">Log in</a>
+    <a href="/registration" class="sign sign-border">Sign up</a>
 </div>
 <h2 class="login-title">Continue your journey in Kyrgyzstan!</h2>
 <form th:action="@{/login}" method="post" class="login__actual-form">
