--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -2,15 +2,76 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/base.css}">
+    <link rel="stylesheet" th:href="@{/css/service.css}">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+            crossorigin="anonymous"/>
     <title>Title</title>
 </head>
 <body>
-<div th:each="service : ${services}">
-    <hr>
-    <p th:text="${service.title}"></p>
-    <div th:each="serv : ${service.servicesMeds}">
-        <a th:href="'/serv/' + ${serv.id}" th:text="${serv.name}"></a>
+<div th:insert="block/header :: header"></div>
+<section class="service">
+    <h1>
+        Услуги, которые предоставлены <br/>
+        в каждой поликлинике
+    </h1>
+    <p>Разнообразный и богатый опыт <br/>постоянное информационно</p>
+    <a href="" class="butt d-flex">Перейти
+        <img src="/images/svg/service-down.svg" alt="arrow"/>
+    </a>
+</section>
+<section class="service-images d-flex">
+    <img src="/images/img/service-bigL.jpg" alt=""/>
+    <img src="/images/img/serviceL.jpg" alt=""/>
+    <img src="/images/img/service-middle.jpg" alt=""/>
+    <img src="/images/img/service-R.jpg" alt=""/>
+    <img src="/images/img/service-bigR.png" alt=""/>
+</section>
+
+<section class="service-choose d-flex">
+    <div class="dropdown" th:each="service : ${services}">
+        <button
+                class="btn a btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+        >
+            <h5 th:text="${service.title}"></h5>
+            <img class="arrow-down" src="/images/svg/arrow-service.svg" alt=""/>
+        </button>
+        <div th:each="serv : ${service.servicesMeds}" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a th:href="'/serv/' + ${serv.id}" th:text="${serv.name}" class="dropdown-item" href="/cardOfService.html"
+            ></a>
+        </div>
     </div>
-</div>
+</section>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"
+></script>
+<div th:insert="block/footer :: footer"></div>
+</body>
+</html>
 </body>
 </html>
