--- a/src/main/resources/templates/serv-info.html
+++ b/src/main/resources/templates/serv-info.html
@@ -1,10 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Card of service</title>
+    <link rel="stylesheet" th:href="@{/css/base.css}">
+    <link rel="stylesheet" th:href="@{/css/cardServ.css}">
 </head>
 <body>
+<div th:insert="block/header :: header"></div>
+<section class="first-block d-flex">
+    <div class="first-block__left d-flex">
+        <h2 th:text="${serviceInfo.name}"></h2>
+        <p th:text="${serviceInfo.about}"></p>
+    </div>
+    <div class="first-block__right d-flex">
+        <div class="content d-flex">
+            <h4>Показания</h4>
+            <p th:text="${serviceInfo.howItWorks}"></p>
+        </div>
+    </div>
+</section>
+<section class="second-block d-flex">
+    <h4>Подготовка к УЗИ почек</h4>
+    <div class="second-block__content d-flex">
+        <div class="second-block__content___left">
+            <p>
+                Для получения наиболее точных и информативных результатов мочевой
+                пузырь обследуемого должен быть наполнен, а кишечник – освобожден от
+                каловых масс и газов.
+            </p>
+            <div class="button d-flex">
+                <a href=""> Записаться </a>
+                <a href=""
+                ><img src="/images/svg/service-link.svg" alt="authorization"
+                /></a>
+            </div>
+        </div>
+        <div class="second-block__content___middle">
+            <ul>
+                <li>
+                    В течение 3 суток до УЗИ почек необходимо соблюдать диету,
+                    ограничивающую продукты, которые повышают газообразование в
+                    кишечнике: молоко и сливки, черный хлеб, бобовые, овощи и сладкие
+                    фрукты, газированные напитки, дрожжевые хлебобулочные изделия и
+                    др.;
+                </li>
+                <li>
+                    Ужин накануне процедуры должен быть легким и не позднее 19.00;
+                </li>
+                <li>
+                    При проблемах с кишечником (упорные запоры, вздутие) перед УЗИ
+                    почек нужно сделать очистительную клизму или принять слабительное
+                    накануне вечером и утром, непосредственно, в день обследования;
+                </li>
+            </ul>
+        </div>
+        <div class="second-block__content___right">
+            <img src="/images/img/service-pic.png" alt="" />
+        </div>
+    </div>
+</section>
+<section class="third-block">
+    <div class="third-block__content d-flex">
+        <div><img src="/images/img/service-pic2.png" alt="" /></div>
+        <div>
+            <h4>Методика проведения</h4>
+            <p>
+                Обследование почек и мочевыделительной системы проводится в
+                нескольких позициях: лежа, на боку, стоя или сидя. На кожу пациента
+                врач-сонолог наносит гипоаллергенный гель на водной основе, чтобы
+                обеспечить наиболее полный контакт датчика с поверхностью тела
+                пациента и повысить уровень передачи ультразвуковых волн. Сначала
+                исследуют почки в продольном направлении (поясничная область), затем
+                изучают поперечные и косые срезы, перемещая датчик на переднюю и
+                боковые поверхности живота. При этом пациента просят поочередно
+                повернуться на правый и левый бок. Такая техника позволяет
+                определить локализацию (месторасположение) почек, их размеры и
+                форму, оценить состояние паренхимы, почечных синусов, чашечек и
+                лоханок.
+            </p>
+        </div>
+    </div>
+</section>
+<div class="fourth-block">
+    <h4>Расшифровка результатов</h4>
+    <div class="fourth-block__content d-flex">
+        <div class="fourth-block__left">
+            <h5>Что показывает УЗИ почек</h5>
+            <ul>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+                <li>очаги воспаления, в том числе и гнойные абсцессы, кисты;</li>
+                <li>отторжение трансплантата;</li>
+                <li>дистрофические изменения в почке;</li>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+            </ul>
+        </div>
+        <div class="fourth-block__right">
+            <h5>УЗИ почек в норме, если:</h5>
+            <ul>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+                <li>очаги воспаления, в том числе и гнойные абсцессы, кисты;</li>
+                <li>отторжение трансплантата;</li>
+                <li>дистрофические изменения в почке;</li>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+                <li>
+                    наличие доброкачественных или злокачественных новообразований;
+                </li>
+            </ul>
+        </div>
+    </div>
 
+</div>
+<div th:insert="block/footer :: footer"></div>
 </body>
 </html>
