--- a/src/main/resources/templates/poly-info.html
+++ b/src/main/resources/templates/poly-info.html
@@ -1,26 +1,106 @@
+
+<!--&lt;!&ndash;====&ndash;&gt;-->
+<!--<div>-->
+<!--    <h5 th:text="'Название: ' + ${pol.name}"></h5>-->
+<!--    <p th:text="'Год: ' + ${pol.year}"></p>-->
+<!--    <p th:text="'Адрес: ' + ${pol.address}"></p>-->
+<!--    <p th:text="'График: ' + ${pol.graphic}"></p>-->
+<!--    <p th:text="'Телефон: ' + ${pol.phone}"></p>-->
+<!--    <p th:text="'Город: ' + ${pol.city.capital}"></p>-->
+<!--    <p th:text="'Регион: ' + ${pol.city.region.name}"></p>-->
+<!--</div>-->
+<!--&lt;!&ndash;====&ndash;&gt;-->
+<!--<br><br><br><br><br><br><br>-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Поликлиники</title>
-    <link rel="stylesheet" th:href="@{/css/pol.css}">
+    <title>Поликлиника</title>
     <link rel="stylesheet" th:href="@{/css/base.css}">
+    <link rel="stylesheet" th:href="@{/css/cardPol.css}">
 </head>
 <body>
 <div th:insert="block/header :: header"></div>
-<!--====-->
-<div>
-    <h5 th:text="'Название: ' + ${pol.name}"></h5>
-    <p th:text="'Год: ' + ${pol.year}"></p>
-    <p th:text="'Адрес: ' + ${pol.address}"></p>
-    <p th:text="'График: ' + ${pol.graphic}"></p>
-    <p th:text="'Телефон: ' + ${pol.phone}"></p>
-    <p th:text="'Город: ' + ${pol.city.capital}"></p>
-    <p th:text="'Регион: ' + ${pol.city.region.name}"></p>
-</div>
-<!--====-->
+<section class="polyclinic">
+    <div class="polyclinic__content d-flex">
+        <img src="/images/svg/clinic.svg" alt="" />
+        <div class="polyclinic__content_right">
+            <h1 th:text="${pol.name}"></h1>
+            <h5 th:text="${pol.city.region.name} + ', ' + ${pol.city.capital}"></h5>
+            <div class="row d-flex">
+                <div class="polyclinic__content_right__col1 d-flex">
+                    <div class="head-doc d-flex">
+                        <h6>Глава:</h6>
+                        <p>Кемелова Алтынай Канатбековна</p>
+                    </div>
+                    <div class="deputy d-flex">
+                        <h6>Зам глава:</h6>
+                        <p>Кемелова Алтынай Канатбековна</p>
+                    </div>
+                    <div class="year d-flex">
+                        <h6>Год открытия:</h6>
+                        <p th:text="${pol.year}"></p>
+                    </div>
+                    <div class="address d-flex">
+                        <h6>Адрес:</h6>
+                        <p th:text="${pol.address}"></p>
+                    </div>
+                    <div class="district d-flex">
+                        <h6>Телеофон</h6>
+                        <p th:text="${pol.phone}"></p>
+                    </div>
+                </div>
+                <div class="polyclinic__content_right__col2 d-flex">
+                    <h6>График:</h6>
+                    <div class="weekdays d-flex">
+                        <p th:text="${pol.graphic}"></p>
+<!--                        <p>8:00 - 18-00 (обед с 13:00 - 14:00)</p>-->
+                    </div>
+<!--                    <div class="weekend d-flex">-->
+<!--                        <p>Выходные:</p>-->
+<!--                        <p>выходной</p>-->
+<!--                    </div>-->
+<!--                    <div class="number d-flex">-->
+<!--                        <h6>Горячая линия:</h6>-->
+<!--                        <p>0228905950, 0223450607</p>-->
+<!--                    </div>-->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="staff">
+    <h4>Персонал</h4>
+    <div class="staff__card d-flex">
+        <img src="/images/img/main-staff.png" alt="staff" />
+        <div class="staff__content">
+            <h3>Дантист</h3>
+            <p>Ворошилов Нурболот Толкунович</p>
+            <p>Стаж: 25 лет</p>
+            <p>Образование: Московский Медицинский университет имени Ленина</p>
+        </div>
+    </div>
+    <div class="staff__card d-flex">
+        <img src="/images/img/main-staff.png" alt="staff" />
+        <div class="staff__content">
+            <h3>Дантист</h3>
+            <p>Ворошилов Нурболот Толкунович</p>
+            <p>Стаж: 25 лет</p>
+            <p>Образование: Московский Медицинский университет имени Ленина</p>
+        </div>
+    </div>
+    <div class="staff__card d-flex">
+        <img src="/images/img/main-staff.png" alt="staff" />
+        <div class="staff__content">
+            <h3>Дантист</h3>
+            <p>Ворошилов Нурболот Толкунович</p>
+            <p>Стаж: 25 лет</p>
+            <p>Образование: Московский Медицинский университет имени Ленина</p>
+        </div>
+    </div>
+</section>
 <br><br><br><br><br><br><br>
 <div th:insert="block/footer :: footer"></div>
 <script  type="text/javascript" th:src="@{/js/update.js}"></script>
